// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaskList /> Should fetch the tasks from service and render 1`] = `
<div>
  <Component
    close={[Function]}
    open={false}
    service={
      Object {
        "getTasks": [Function],
      }
    }
  />
  <Component
    key="11"
    service={
      Object {
        "getTasks": [Function],
      }
    }
    task={
      Object {
        "description": "test1@test.com",
        "id": 11,
        "name": "test1",
      }
    }
  />
  <Component
    key="10"
    service={
      Object {
        "getTasks": [Function],
      }
    }
    task={
      Object {
        "description": "test@test.com",
        "id": 10,
        "name": "test",
      }
    }
  />
  <WithStyles(Fab)
    aria-label="Add"
    className="fab"
    color="secondary"
    onClick={[Function]}
  >
    <pure(AddIcon) />
  </WithStyles(Fab)>
</div>
`;

exports[`<TaskList /> Should not display tasks if service returns an error 1`] = `
<div>
  <Component
    close={[Function]}
    open={false}
    service={
      Object {
        "getTasks": [Function],
      }
    }
  />
  <WithStyles(Fab)
    aria-label="Add"
    className="fab"
    color="secondary"
    onClick={[Function]}
  >
    <pure(AddIcon) />
  </WithStyles(Fab)>
</div>
`;
